# lab4-dacsson

./: CMakeLists.txt
include/: MapReduce.h  MapReduceAgr.h  Product.h
src/: MapReduce.cc  MapReduceAgr.cc  main.cc  main_agr.cc
